<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_scrollFlags="scroll|enterAlways|snap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_qr_error"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_error_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_margin="24dp"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/mBtnRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/common_repeat"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:cornerRadius="50dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/mBtnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/common_cancel"
            android:textAllCaps="true"
            app:strokeColor="@color/colorEditTextHint"
            app:strokeWidth="1.5dp"
            app:backgroundTint="@android:color/transparent"
            android:textColor="@color/colorEditTextHint"
            android:textSize="18sp"
            app:cornerRadius="50dp" />

    </LinearLayout>

</LinearLayout>